Fix keyboard shortcut for row deletion. Overflow hidden for popovers.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,3 +37,6 @@ i.fa.discrete:hover {
 .tab-pane {
   padding-top: 30px;
 }
+.popover {
+  overflow: hidden;
+}
